--- a/style.css
+++ b/style.css
@@ -47,8 +47,41 @@ h4 {
     color: white; }
 
 .collage .tile {
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
+  .collage .tile.animal p {
+    position: absolute;
+    text-align: center;
+    font-size: 0.9rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+    color: white;
+    opacity: 0;
+    transition: all 200ms linear; }
+  .collage .tile.animal:after {
+    content: "";
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 150%;
+    width: 150%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 0;
+    opacity: 0;
+    transition: all 200ms ease; }
+  .collage .tile.animal:hover p, .collage .tile.animal:focus p {
+    opacity: 1; }
+  .collage .tile.animal:hover img, .collage .tile.animal:focus img {
+    transform: scale(1.05); }
+  .collage .tile.animal:hover:after, .collage .tile.animal:focus:after {
+    opacity: 1;
+    top: 0; }
 .collage img {
+  position: relative;
   will-change: transform;
   transition: transform 200ms ease; }
   .collage img:hover, .collage img:focus {
@@ -63,6 +96,9 @@ h4 {
 
   h2 {
     font-size: 2rem; }
+
+  .collage .tile.animal p {
+    font-size: 0.7rem; }
 
   .eoi a {
     font-family: 'Oswald', sans-serif;
