--- a/style.scss
+++ b/style.scss
@@ -57,8 +57,50 @@ h4 {
 .collage {
   .tile {
     overflow: hidden;
+    position: relative;
+    &.animal {
+      p {
+        position: absolute;
+        text-align: center;
+        font-size: 0.9rem;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 20;
+        color: white;
+        opacity: 0;
+        transition: all 200ms linear;
+      }
+      &:after {
+        content: "";
+        color: white;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        height: 150%;
+        width: 150%;
+        background: rgba(0, 0, 0, 0.7);
+        z-index: 0;
+        opacity: 0;
+        transition: all 200ms ease;
+      }
+      &:hover, &:focus {
+        p {
+          opacity: 1;
+        }
+        img {
+          transform: scale(1.05);
+        }
+        &:after {
+          opacity: 1;
+          top: 0;
+        }
+      }
+    }
   }
   img {
+    position: relative;
     will-change: transform;
     transition: transform 200ms ease;
     &:hover, &:focus {
@@ -78,6 +120,15 @@ h4 {
   }
   h2 {
     font-size: 2rem;
+  }
+  .collage {
+    .tile {
+      &.animal {
+        p {
+          font-size: 0.7rem;
+        }
+      }
+    }
   }
   .eoi {
     a {
