--- a/style.scss
+++ b/style.scss
@@ -53,6 +53,9 @@ h4 {
     font-size: 2rem;
     color: white;
   }
+  &:hover {
+    background-color: lighten($teal, 10%);
+  }
 }
 .collage {
   .tile {
