--- a/style.css
+++ b/style.css
@@ -3,109 +3,150 @@
 @import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 @font-face {
   font-family: 'Hello Stockholm';
-  src: url("./fonts/HelloStockholm-Regular.ttf"); }
+  src: url("./fonts/HelloStockholm-Regular.ttf");
+}
+
 h1 {
   font-family: 'Satisfy', cursive;
   font-size: 7rem;
-  color: #38A89C; }
+  color: #38A89C;
+}
 
 h2 {
   font-family: 'Oswald', sans-serif;
   font-size: 2.5rem;
   font-weight: 700;
-  color: #5C5E5D; }
+  color: #5C5E5D;
+}
 
 h3 {
   font-family: 'Oswald', sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+}
 
 h4 {
   font-family: 'Satisfy', cursive;
   font-size: 2rem;
-  color: #38A89C; }
+  color: #38A89C;
+}
 
 .header {
+  background: -webkit-gradient(linear, left top, left bottom, from(#c8c8c8), to(#e0e0e0));
   background: linear-gradient(#c8c8c8, #e0e0e0);
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
-  position: relative; }
-  .header:before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(200, 200, 200, 0), white), url("./img/math-white.png");
-    position: absolute;
-    inset: 0; }
+  position: relative;
+}
+
+.header:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(200, 200, 200, 0)), to(white)), url("./img/math-white.png");
+  background: linear-gradient(rgba(200, 200, 200, 0), white), url("./img/math-white.png");
+  position: absolute;
+  inset: 0;
+}
 
 .eoi {
-  background-color: #38A89C; }
-  .eoi a {
-    font-family: 'Oswald', sans-serif;
-    font-family: 700;
-    font-size: 2rem;
-    color: white; }
-  .eoi:hover {
-    background-color: #4fc4b8; }
+  background-color: #38A89C;
+}
+
+.eoi a {
+  font-family: 'Oswald', sans-serif;
+  font-family: 700;
+  font-size: 2rem;
+  color: white;
+}
+
+.eoi:hover {
+  background-color: #4fc4b8;
+}
 
 .collage .tile {
   overflow: hidden;
-  position: relative; }
-  .collage .tile.animal p {
-    position: absolute;
-    text-align: center;
-    font-size: 0.9rem;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 20;
-    color: white;
-    opacity: 0;
-    transition: all 200ms linear; }
-  .collage .tile.animal:after {
-    content: "";
-    color: white;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    height: 150%;
-    width: 150%;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 0;
-    opacity: 0;
-    transition: all 200ms ease; }
-  .collage .tile.animal:hover p, .collage .tile.animal:focus p {
-    opacity: 1; }
-  .collage .tile.animal:hover img, .collage .tile.animal:focus img {
-    transform: scale(1.05); }
-  .collage .tile.animal:hover:after, .collage .tile.animal:focus:after {
-    opacity: 1;
-    top: 0; }
+  position: relative;
+}
+
+.collage .tile.animal p {
+  position: absolute;
+  text-align: center;
+  font-size: 0.9rem;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 20;
+  color: white;
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.collage .tile.animal:after {
+  content: "";
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 150%;
+  width: 150%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 0;
+  opacity: 0;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+
+.collage .tile.animal:hover p, .collage .tile.animal:focus p {
+  opacity: 1;
+}
+
+.collage .tile.animal:hover img, .collage .tile.animal:focus img {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.collage .tile.animal:hover:after, .collage .tile.animal:focus:after {
+  opacity: 1;
+  top: 0;
+}
+
 .collage img {
   position: relative;
   will-change: transform;
-  transition: transform 200ms ease; }
-  .collage img:hover, .collage img:focus {
-    transform: scale(1.05); }
+  -webkit-transition: -webkit-transform 200ms ease;
+  transition: -webkit-transform 200ms ease;
+  transition: transform 200ms ease;
+  transition: transform 200ms ease, -webkit-transform 200ms ease;
+}
+
+.collage img:hover, .collage img:focus {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
 
 .footer p, .footer a {
-  color: #38A89C; }
+  color: #38A89C;
+}
 
 @media (max-width: 768px) {
   h1 {
-    font-size: 4rem; }
-
+    font-size: 4rem;
+  }
   h2 {
-    font-size: 2rem; }
-
+    font-size: 2rem;
+  }
   .collage .tile.animal p {
-    font-size: 0.7rem; }
-
+    font-size: 0.7rem;
+  }
   .eoi a {
     font-family: 'Oswald', sans-serif;
     font-family: 700;
     font-size: 1.5rem;
-    color: white; } }
-
+    color: white;
+  }
+}
 /*# sourceMappingURL=style.css.map */
