--- a/news/style.css
+++ b/news/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #e4e4e4;
+  color: #4c4c4c;
 }
 
 .button {
@@ -15,13 +16,36 @@ body {
   font-size: 20px;
   border-radius: 10px;
   text-decoration: none;
+  padding: 20px;
+  margin-top: 20px;
 }
 
 h1 {
   color: #38A89C;
+  margin-top: 0;
 }
 
 table {
   background-color: white;
+}
+
+.aoc {
+  background-color: #deeaf6;
+}
+
+hr {
+  border-top: 3px solid #38A89C;
+}
+
+h2 {
+  color: white;
+  background-color: #b71b22;
+  padding: 10px;
+  font-size: 22px;
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
 }
 /*# sourceMappingURL=style.css.map */
