--- a/news/style.scss
+++ b/news/style.scss
@@ -6,10 +6,13 @@
 
 $teal: #38A89C;
 $grey:#5C5E5D;
+$red:#b71b22;
+$blue: #deeaf6;
 
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #e4e4e4;
+    color:#4c4c4c;
 }
 
 .button{
@@ -18,14 +21,35 @@ body {
     font-size: 20px;
     border-radius: 10px;
     text-decoration: none;
+    padding:20px;
+    margin-top:20px;
 }
 
 h1{
     color:$teal;
+    margin-top:0;
 }
 
 table{
     background-color: white;
 }
 
+.aoc{
+    background-color: $blue;
+}
 
+hr{
+    border-top:3px solid $teal;
+}
+
+h2{
+    color:white;
+    background-color: $red;
+    padding:10px;
+    font-size: 22px;
+    margin:0;
+}
+
+h3{
+    margin:0;
+}
