--- a/news/style.css
+++ b/news/style.css
@@ -35,6 +35,7 @@ table {
 
 hr {
   border-top: 3px solid #38A89C;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -43,9 +44,16 @@ h2 {
   padding: 10px;
   font-size: 22px;
   margin: 0;
+  margin-bottom: 10px;
 }
 
 h3 {
   margin: 0;
+}
+
+#logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 /*# sourceMappingURL=style.css.map */
