--- a/news/style.scss
+++ b/news/style.scss
@@ -40,6 +40,7 @@ table{
 
 hr{
     border-top:3px solid $teal;
+    margin-bottom:20px;
 }
 
 h2{
@@ -48,8 +49,17 @@ h2{
     padding:10px;
     font-size: 22px;
     margin:0;
+    margin-bottom: 10px;
 }
 
 h3{
     margin:0;
+}
+
+
+#logo
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
