--- a/news/style.css
+++ b/news/style.css
@@ -21,8 +21,12 @@ body {
 }
 
 h1 {
-  color: #38A89C;
+  color: white;
   margin-top: 0;
+  background-color: #38A89C;
+  margin-top: 30px;
+  margin-bottom: 0;
+  padding: 10px;
 }
 
 table {
@@ -55,5 +59,18 @@ h3 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.qr {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+}
+
+#footer h2 {
+  background-color: white;
+  color: #38A89C;
+  padding: 0;
 }
 /*# sourceMappingURL=style.css.map */
