--- a/news/style.scss
+++ b/news/style.scss
@@ -26,8 +26,13 @@ body {
 }
 
 h1{
-    color:$teal;
+    color:white;
     margin-top:0;
+    background-color: $teal;
+    margin-top: 30px;
+    margin-bottom: 0;
+    padding:10px;
+    
 }
 
 table{
@@ -63,3 +68,20 @@ h3{
     margin-left: auto;
     margin-right: auto;
 }
+
+.qr{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom:40px;
+}
+
+#footer{
+    h2{
+        background-color: white;
+        color:$teal;
+        padding:0;
+    }
+}
+
+
