--- a/news/style.css
+++ b/news/style.css
@@ -24,7 +24,6 @@ h1 {
   color: white;
   margin-top: 0;
   background-color: #38A89C;
-  margin-top: 30px;
   margin-bottom: 0;
   padding: 10px;
 }
@@ -59,6 +58,7 @@ h3 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 40px;
 }
 
 .qr {
@@ -72,5 +72,10 @@ h3 {
   background-color: white;
   color: #38A89C;
   padding: 0;
+}
+
+#harbour {
+  width: 600px;
+  margin-bottom: 0px;
 }
 /*# sourceMappingURL=style.css.map */
