--- a/news/style.scss
+++ b/news/style.scss
@@ -29,7 +29,6 @@ h1{
     color:white;
     margin-top:0;
     background-color: $teal;
-    margin-top: 30px;
     margin-bottom: 0;
     padding:10px;
     
@@ -67,6 +66,7 @@ h3{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom:40px;
 }
 
 .qr{
@@ -85,3 +85,8 @@ h3{
 }
 
 
+#harbour{
+    width:600px;
+    margin-bottom:0px;
+    
+}
