--- a/news/style.css
+++ b/news/style.css
@@ -12,20 +12,21 @@ body {
 
 .button {
   background-color: #38A89C;
+  display: block;
   color: white;
   font-size: 20px;
   border-radius: 10px;
   text-decoration: none;
   padding: 20px;
   margin-top: 20px;
+  text-align: center;
 }
 
 h1 {
   color: #38A89C;
   margin-top: 0;
-  margin-top: 30px;
   margin-bottom: 0;
-  padding: 10px;
+  padding-left: 10px;
 }
 
 table {
@@ -33,7 +34,8 @@ table {
 }
 
 .aoc {
-  background-color: #deeaf6;
+  background-color: white;
+  padding: 25px;
 }
 
 hr {
@@ -43,7 +45,7 @@ hr {
 
 h2 {
   color: white;
-  background-color: #b71b22;
+  background-color: #941a1b;
   padding: 10px;
   font-size: 22px;
   margin: 0;
@@ -54,6 +56,11 @@ h3 {
   margin: 0;
 }
 
+h4 {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
 .qr {
   display: block;
   margin-left: auto;
@@ -61,10 +68,26 @@ h3 {
   margin-bottom: 40px;
 }
 
+#footer {
+  background-color: #e4e4e4;
+}
+
 #footer h2 {
-  background-color: white;
+  background-color: #e4e4e4;
   color: #38A89C;
   padding: 0;
+}
+
+#footer img {
+  margin-bottom: 20px;
+}
+
+#footer-td {
+  background-color: #e4e4e4;
+}
+
+#contact-heading {
+  margin: 0;
 }
 
 td {
@@ -76,5 +99,27 @@ td {
   margin-left: auto;
   margin-right: auto;
   width: 400px;
+}
+
+#details {
+  margin-top: 0;
+}
+
+#details-p {
+  text-align: center;
+  margin-top: 0px;
+}
+
+#contents li a {
+  color: #941a1b;
+  text-decoration: none;
+}
+
+#sponsor-td {
+  background-color: #3d3d3d;
+}
+
+#sponsors {
+  margin: 0;
 }
 /*# sourceMappingURL=style.css.map */
