--- a/news/style.scss
+++ b/news/style.scss
@@ -116,14 +116,7 @@ td{
 }
 
 
-#contents{
-    li{
-        a{
-            color:#941a1b;
-            text-decoration: none;
-        }
-    }
-}
+
 
 #sponsor-td{
     background-color:#3d3d3d ;
@@ -131,4 +124,8 @@ td{
 
 #sponsors{
     margin:0;
+}
+
+a{
+    color:$teal;
 }
