--- a/news/style.scss
+++ b/news/style.scss
@@ -1,16 +1,15 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap");
-@font-face {
-    font-family: 'Vag';
-    src: url("fonts/vag.TTF");
-}
+
 
 $teal: #38A89C;
 $grey:#5C5E5D;
 $red:#941a1b;
 $blue: #deeaf6;
 
+
+*{font-family: Arial, "sans-serif";}
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: Arial, "sans-serif";
     background-color: #e4e4e4;
     color:#4c4c4c;
 }
@@ -23,8 +22,12 @@ body {
     border-radius: 10px;
     text-decoration: none;
     padding:20px;
-    margin-top:20px;
+    
     text-align: center;
+    a{
+        color:white;
+        text-decoration: none;
+    }
 }
 
 h1{
@@ -49,13 +52,14 @@ hr{
     margin-bottom:20px;
 }
 
-h2{
+.heading{
     color:white;
     background-color: $red;
-    padding:10px;
-    font-size: 22px;
+   
+    
+}
+h2{
     margin:0;
-    margin-bottom: 10px;
 }
 
 h3{
