--- a/news/style.css
+++ b/news/style.css
@@ -6,6 +6,7 @@ body {
   font-family: Arial, "sans-serif";
   background-color: #e4e4e4;
   color: #4c4c4c;
+  line-height: 1.5;
 }
 
 .button {
@@ -24,20 +25,8 @@ body {
   text-decoration: none;
 }
 
-h1 {
-  color: #38A89C;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 10px;
-}
-
 table {
   background-color: white;
-}
-
-.aoc {
-  background-color: white;
-  padding: 25px;
 }
 
 hr {
@@ -45,82 +34,29 @@ hr {
   margin-bottom: 20px;
 }
 
-.heading {
-  color: white;
-  background-color: #941a1b;
-}
-
-h2 {
-  margin: 0;
-}
-
-h3 {
-  margin: 0;
-}
-
-h4 {
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-
-.qr {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 40px;
-}
-
-#footer {
-  background-color: #e4e4e4;
-}
-
-#footer h2 {
-  background-color: #e4e4e4;
-  color: #38A89C;
-  padding: 0;
-}
-
-#footer img {
-  margin-bottom: 20px;
-}
-
-#footer-td {
-  background-color: #e4e4e4;
-}
-
-#contact-heading {
-  margin: 0;
-}
-
-td {
-  max-width: 600px;
-}
-
-#icmeLogo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 400px;
-}
-
-#details {
-  margin-top: 0;
-}
-
-#details-p {
-  text-align: center;
-  margin-top: 0px;
-}
-
-#sponsor-td {
-  background-color: #3d3d3d;
-}
-
-#sponsors {
-  margin: 0;
-}
-
 a {
   color: #38A89C;
+}
+
+.keydates {
+  border: 1px #e4e4e4 solid;
+}
+
+.keydates th {
+  background: #941a1b;
+  color: white;
+}
+
+.keydates td {
+  border: 1px #e4e4e4 solid;
+  font-size: 14px;
+}
+
+.keydates tr:nth-child(even) {
+  background-color: #eee;
+}
+
+.bio {
+  font-size: 15px;
 }
 /*# sourceMappingURL=style.css.map */
