--- a/news/style.scss
+++ b/news/style.scss
@@ -30,7 +30,26 @@ body {
         text-decoration: none;
     }
 }
+.button-brown{
+    background-color: #921b1d;
+    display: block;
+    color:white;
+    font-size: 20px;
+    border-radius: 10px;
+    text-decoration: none;
+    padding:20px;
+    
+    text-align: center;
+    a{
+        color:white;
+        text-decoration: none;
+    }
+}
 
+
+.green{
+    color:#38A89C;
+}
 
 
 table{
@@ -43,7 +62,7 @@ hr{
 }
 
 a{
-    color:$teal;
+    color:#428bca;
 }
 
 .keydates{
