--- a/news/style.scss
+++ b/news/style.scss
@@ -15,6 +15,8 @@ body {
     line-height: 1.5;
 }
 
+.bdbt {border-bottom: 1px solid #ccc;}
+.no-y-padding td {padding-top: 0; padding-bottom: 0;}
 .button{
     background-color: #38A89C;
     display: block;
